--- a/app/src/main/res/layout/activity_registration_family_info_second_page.xml
+++ b/app/src/main/res/layout/activity_registration_family_info_second_page.xml
@@ -251,7 +251,8 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:gravity="left"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="20dp"
