--- a/app/src/main/res/layout/activity_registration_family_info_second_page.xml
+++ b/app/src/main/res/layout/activity_registration_family_info_second_page.xml
@@ -288,7 +288,8 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view_other"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
 
                 <LinearLayout
                     android:id="@+id/button_other"
