--- a/app/src/main/res/layout/other.xml
+++ b/app/src/main/res/layout/other.xml
@@ -3,6 +3,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginTop="10dp"
+    android:id="@+id/root_layout"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="সম্পর্ক"
+            android:text="@string/relation_title_text"
             android:textSize="18dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"/>
@@ -58,6 +59,13 @@
             />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/details_info_fields_root_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
 
     <EditText
         android:id="@+id/name_other"
@@ -106,8 +114,6 @@
 
     </LinearLayout>
 
-
-
     <LinearLayout
         android:id="@+id/professonal_status_other"
         android:layout_width="match_parent"
@@ -141,7 +147,6 @@
             />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/professonal_group_status_other"
@@ -189,6 +194,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:singleLine="true"/>
+
     <EditText
         android:id="@+id/institution_other"
         android:layout_width="match_parent"
@@ -201,7 +207,6 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:singleLine="true"/>
-
 
     <LinearLayout
         android:id="@+id/marital_status_other"
@@ -234,5 +239,6 @@
             android:src="@drawable/down_arrow"
             />
 
+    </LinearLayout>
     </LinearLayout>
 </LinearLayout>
